--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -7,223 +7,157 @@
   min-height: 100vh;
 }
 
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
-}
+.header{
+ 
 
-.description a {
+align-items: center;
+ margin-top: 7.2rem;
+ display: flex;
+ flex-direction: column;
+ gap: 3rem;
+}
+.logo{
   display: flex;
-  justify-content: center;
+  align-content: center;
   align-items: center;
-  gap: 0.5rem;
+  gap: 1rem;
+}
+.logo h1{
+  font-size: 2rem;
+  font-weight: 400;
+  
+}
+.logo span{
+  font-weight: bold;
 }
 
-.description p {
-  position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
+.urlWrapper{
+ display: flex;
+ width: 100%;
+ gap: 2rem;
+ align-items: center;
+ justify-content: center;
+
 }
 
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
-}
-
-.grid {
+.content{
   display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  width: var(--max-width);
-  max-width: 100%;
+  flex-wrap: wrap;
+  height: 100%;
+  align-content: flex-start;
+  grid-template-columns: repeat(auto-fill, minmax(400px,2fr));
+  background: var(--surface-primary);
+  border-radius: clamp(3.4rem, 4vw, 6.4rem) clamp(3.4rem, 4vw, 6.4rem) 0 0;
+  
+  gap:3.2rem;
+  padding: 4rem;
 }
 
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
-}
-
-.card span {
-  display: inline-block;
-  transition: transform 200ms;
-}
-
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
-}
-
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
-}
-
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.content > div {
   position: relative;
-  padding: 4rem 0;
 }
 
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
+.youtube_player{
+  width: 100%;
   height: 360px;
-  margin-left: -400px;
+  border-radius: clamp(2.2rem, 3vw,3.2rem);
+  overflow: hidden;
+  background: var(--video-background);
+  box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.25);
+  
 }
 
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
+.grid_container{
+  display: grid;
+  height: 100%;
+  gap: 3rem;
+
+  grid-template-rows: max-content 1fr;
+
+  
+}
+.container{
+  width:100%;
+  max-width: 1400px;
+
+  padding-inline: 3rem;
+ 
+  margin-inline: auto;
 }
 
-.center::before,
-.center::after {
+.description{
+
+  overflow-y: auto;
+  height: 360px;
+  scroll-snap-type: y mandatory;
+
+}
+
+.description > div{
+
+display: flex;
+align-items: center;
+scroll-snap-align: start;
+scroll-margin-top: 40px;
+gap: 1rem;
+position: relative;
+}
+.timestamp_content:after,.timestamp_content::before{
+
   content: '';
-  left: 50%;
+  pointer-events: none;
   position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
+  width: 100%;
+  height: 40px;
+  background: var(--surface-secondary, #1F2937);
+  z-index: 1;
 }
 
-.logo {
-  position: relative;
+.timestamp_content::before{
+  background: linear-gradient(180deg, rgba(17,24,39,1) 0%, rgba(0,0,0,0) 76%);
+  top: 0;
 }
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
-  }
-
-  .card:hover span {
-    transform: translateX(4px);
-  }
+.timestamp_content::after{
+  background: linear-gradient(0deg, rgba(17,24,39,1) 0%, rgba(0,0,0,0) 76%);
+  bottom: 0;
 }
-
-@media (prefers-reduced-motion) {
-  .card:hover span {
-    transform: none;
-  }
+.description > div > p{
+  color: var(--text-tertiary);
+  width: 100%;
+  padding-inline: .4rem;
+  border-radius: .4rem;
+  transition: all 500ms ease-out;
 }
-
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
-  }
-
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
-    text-align: center;
-  }
-
-  .card {
-    padding: 1rem 2.5rem;
-  }
-
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .center {
-    padding: 8rem 0 6rem;
-  }
-
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
-
-  .description {
-    font-size: 0.8rem;
-  }
-
-  .description a {
-    padding: 1rem;
-  }
-
-  .description p,
-  .description div {
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    width: 100%;
-  }
-
-  .description p {
-    align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
-  }
-
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
-  }
+.description > div > p:hover{
+  background: var(--surface-tertiary);
+  
 }
 
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
-  }
+.description > div:first-child{
+  margin-top: 2rem;
 }
 
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
+.description > div:last-child{
+  scroll-snap-align: end;
+  margin-bottom: 2rem;
+}
+.description > div+div{
+margin-top: 1rem;
 
-  .logo {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
 }
 
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
-  }
+.description > div > span{
+  border-radius: .4rem;
+  padding: .4rem .8rem;
+  color: var(--text-secondary);
+  display: inline-flex;
+  font-size: 1.2rem;
+  background: var(--surface-tertiary);
+  
+}
+.description > div > p{
+  line-height: 24px;
+
+  color: var(--text-primary);
+  
 }
