--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -45,12 +45,12 @@ align-items: center;
   flex-wrap: wrap;
   height: 100%;
   align-content: flex-start;
-  grid-template-columns: repeat(auto-fill, minmax(400px,2fr));
+  grid-template-columns: repeat(auto-fill, minmax(min(400px, 50%), 1fr));
   background: var(--surface-primary);
   border-radius: clamp(3.4rem, 4vw, 6.4rem) clamp(3.4rem, 4vw, 6.4rem) 0 0;
   
   gap:3.2rem;
-  padding: 4rem;
+  padding: clamp(2rem,3vw,4rem);
 }
 
 .content > div {
@@ -59,7 +59,7 @@ align-items: center;
 
 .youtube_player{
   width: 100%;
-  height: 360px;
+  height: min( 360px, 35vw);
   border-radius: clamp(2.2rem, 3vw,3.2rem);
   overflow: hidden;
   background: var(--video-background);
